@@ -25,6 +25,19 @@ public class FunctorCompilerTest {
         assertEquals(0, k);
 
     }
+
+    @Test
+    public void doubleFunctor(){
+        List<String> args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/functor/DoubleFunctor")
+                .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
+                .collect(Collectors.toList());
+        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName(), "-p", "../annotation-definitions/target/annotation-definitions-1.0-SNAPSHOT.jar", "--add-modules", "functional.annotations"));
+        String[] flags = args.toArray(new String[4]);
+        int k = ToolProvider.getSystemJavaCompiler()
+                .run(System.in, System.out, System.err, flags);
+        assertEquals(0, k);
+    }
+
     @Test
     public void functorNoPublicFun() {
         List<String> args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/functor/NoPublicMapFunctor")
